[package]
name = "chain-inspector"
version = "0.0.1"
authors = ["Dariusz Depta <depta@engos.de>"]
repository = "https://github.com/DariuszDepta/chain-inspector.git"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = { version = "1.0.149" }
tokio = { version = "1.50.0", features = ["full"] }
