[package]
name = "chain-inspector"
version = "0.0.2"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "Blockchain inspector"
repository = "https://github.com/DariuszDepta/chain-inspector.git"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = { version = "1.0.149" }
tokio = { version = "1.50.0", features = ["full"] }
